# previewfox

./: Cargo.toml  LICENSE  README.md  previewer  previewfox.sh
src/: firefox.rs  main.rs  profile.rs
src/assets/: customkeys.json  user.js  userchrome.css  usercontent.css
