[package]
name = "previewfox"
version = "1.0.0"
edition = "2024"
authors = [ "scientiac < iac@scientiac.space >" ]
description = "A script to change firefox UI to have no components, just the content view, made for live previews."
readme = "README.md"
repository = "https://github.com/scientiac/previewfox"
homepage = "https://github.com/scientiac/previewfox"
license = "GPL-3.0"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ctrlc = "3.5.2"
dirs = "6.0.0"
